--- a/src/templates/home/TagsDeck/TagsDeck.html
+++ b/src/templates/home/TagsDeck/TagsDeck.html
@@ -3,7 +3,7 @@
 		<div class="flex-row gap-10p">
 			<h2 id="TagDeckHeader">Tags</h2>
 		</div>
-		<div class="flex-row icon-holder" style="gap:2px">
+		<div class="flex-row button-container" style="gap:2px">
 			<!-- Add tag button -->
 			<i id="utubTagBtnCreate" style="display: none !important;" class="green-clickable ms-1" tabindex="0">
 				<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill" width="30"
