--- a/src/templates/home/URLDeck/URLDeckHeader.html
+++ b/src/templates/home/URLDeck/URLDeckHeader.html
@@ -21,7 +21,7 @@
 	</div>
 
 	<!-- Create URL button -->
-	<div class="col-3 col-lg-3 d-flex flex-row icon-holder">
+	<div class="col-3 col-lg-3 d-flex flex-row button-container">
 		<i id="urlBtnCreate" class="green-clickable" style="display: none;" tabindex="0">
 			<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
 				class="bi bi-plus-square-fill" viewBox="0 0 16 16">
