--- a/src/templates/home/MemberDeck/MemberDeckHeaders.html
+++ b/src/templates/home/MemberDeck/MemberDeckHeaders.html
@@ -22,7 +22,7 @@
 	</div>
 </div>
 
-<div class="titleElement pad-in-15p">
+<div class="titleElement pad-in-15p dynamic-subheader">
 	<!-- Subheader -->
 	<!--<h5 id="MemberDeckSubheader">Add a member</h5> -->
 	<h5 id="MemberDeckSubheader"></h5>
