--- a/src/templates/home/URLDeck/URLDeckSubheader.html
+++ b/src/templates/home/URLDeck/URLDeckSubheader.html
@@ -1,4 +1,4 @@
-<div class="titleElement pad-in-15p">
+<div class="titleElement pad-in-15p dynamic-subheader height-2p5rem">
 	<div class="flex-row align-center" id="UTubDescriptionSubheaderWrap">
 		<h5 id="URLDeckSubheader">Select a UTub</h5>
 		<!-- Update UTub description button -->
