--- a/src/templates/home/MemberDeck/MemberDeckHeaders.html
+++ b/src/templates/home/MemberDeck/MemberDeckHeaders.html
@@ -2,7 +2,7 @@
 	<div class="col-6 col-lg-6">
 		<h2 id="MemberDeckHeader">Members</h2>
 	</div>
-	<div class="col-6 col-lg-6 d-flex flex-row icon-holder">
+	<div class="col-6 col-lg-6 d-flex flex-row button-container">
 		<!-- Add user button -->
 		<i id="memberBtnCreate" class="green-clickable ms-1" tabindex="0" style="display: none">
 			<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
@@ -22,7 +22,7 @@
 	</div>
 </div>
 
-<div class="titleElement pad-in-15p">
+<div class="titleElement pad-in-15p dynamic-subheader">
 	<!-- Subheader -->
 	<!--<h5 id="MemberDeckSubheader">Add a member</h5> -->
 	<h5 id="MemberDeckSubheader"></h5>
