--- a/src/templates/_routes_constants.html
+++ b/src/templates/_routes_constants.html
@@ -1,4 +1,5 @@
-<script type="text/javascript">
+
+<script type="text/javascript" nonce="{{ nonce }}">
     class Routes {
         constructor() {
             if (!Routes.instance) {
