--- a/src/templates/error_pages/error_response.html
+++ b/src/templates/error_pages/error_response.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invalid Request - URLS4IRL</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
+    <style nonce="{{ nonce }}">
         body {
             margin: 0;
             padding: 0;
