--- a/src/templates/home/MemberDeck/MemberDeckHeaders.html
+++ b/src/templates/home/MemberDeck/MemberDeckHeaders.html
@@ -4,7 +4,7 @@
 	</div>
 	<div class="col-6 col-lg-6 d-flex flex-row button-container">
 		<!-- Add user button -->
-		<i id="memberBtnCreate" class="green-clickable ms-1" tabindex="0" style="display: none">
+		<i id="memberBtnCreate" class="green-clickable ms-1 hidden" tabindex="0">
 			<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
 				width="30" height="30" viewBox="0 0 16 16">
 				<path
@@ -12,7 +12,7 @@
 			</svg>
 		</i>
 		<!-- Leave UTub button -->
-		<i id="memberSelfBtnDelete" style="display: none;" tabindex="0">
+		<i id="memberSelfBtnDelete" class="hidden" tabindex="0">
 			<svg xmlns="http://www.w3.org/2000/svg" fill="black" class="trash-fill" height="30px"
 				width="30px" viewBox="0 -960 960 960">
 				<path
