--- a/src/templates/home/TagsDeck/CreateUTubTagForm.html
+++ b/src/templates/home/TagsDeck/CreateUTubTagForm.html
@@ -1,4 +1,4 @@
-<div id="createUTubTagWrap" class="input-text-holder flex-column createDiv pad-in-15p" style="display: none;">
+<div id="createUTubTagWrap" class="input-text-holder flex-column createDiv pad-in-15p hidden">
 	<div class="text-input-container">
 		<div class="text-input-inner-container">
 			<input class="text-input" type="text" id="utubTagCreate" name="utubTag" minlength={{CONSTANTS.TAGS.MIN_TAG_LENGTH}} maxlength={{CONSTANTS.TAGS.MAX_TAG_LENGTH}} required>
@@ -6,7 +6,7 @@
 		</div>
 		<span class="text-input-error-message" id="utubTagCreate-error"></span>
 	</div>
-	<div class="flex-row justify-center" style="gap: 8px; flex: 1 1 auto; align-items: flex-end;">
+	<div class="flex-row justify-center gap-8p flex-1-1-auto align-flex-end">
 		<!-- Checkbox to create UTub Tag -->
 		<i class="green-clickable-wide half-width flex-column align-center justify-center border-radius-5px" id="utubTagSubmitBtnCreate" tabindex="0">
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="30px" height="30px">
