--- a/src/templates/home/URLDeck/CreateURLForm.html
+++ b/src/templates/home/URLDeck/CreateURLForm.html
@@ -1,4 +1,4 @@
-<div id="createURLWrap" class="input-text-holder flex-column createDiv pad-in-15p gap-20p" style="display: none;">
+<div id="createURLWrap" class="input-text-holder flex-column createDiv pad-in-15p gap-20p hidden">
 	<div class="text-input-container">
 		<div class="text-input-inner-container">
 			<input class="text-input" type="text" id="urlTitleCreate" name="urlTitle"
@@ -17,7 +17,7 @@
 		</div>
 		<span class="text-input-error-message" id="urlStringCreate-error"></span>
 	</div>
-	<div class="flex-row flex-start" style="gap: 8px; flex: 1 1 auto;">
+	<div class="flex-row flex-start gap-8p flex-1-1-auto">
 		<button id="urlSubmitBtnCreate" class="card-link btn green-clickable-wide btn-text-on-hvr"
 			type="button">Add URL</button>
 		<button id="urlCancelBtnCreate" class="card-link btn cancelButton-wide btn-text-on-hvr"
