--- a/src/templates/home/URLDeck/URLDeckHeader.html
+++ b/src/templates/home/URLDeck/URLDeckHeader.html
@@ -5,7 +5,7 @@
 		<div class="flex-row align-center" id="UTubNameUpdateWrap">
 			<h2 id="URLDeckHeader">URLs</h2>
 			<!-- Show Update UTub name button -->
-			<i id="utubNameBtnUpdate" class="mx-1" style="display: none;">
+			<i id="utubNameBtnUpdate" class="mx-1 hidden">
 				<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
 					class="bi bi-pencil-square updateIcon" viewBox="0 0 16 16">
 					<path
@@ -22,7 +22,7 @@
 
 	<!-- Create URL button -->
 	<div class="col-3 col-lg-3 d-flex flex-row button-container">
-		<i id="urlBtnCreate" class="green-clickable" style="display: none;" tabindex="0">
+		<i id="urlBtnCreate" class="green-clickable hidden" tabindex="0">
 			<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
 				class="bi bi-plus-square-fill" viewBox="0 0 16 16">
 				<path
