--- a/src/templates/home/URLDeck/UpdateUTubDescriptionForm.html
+++ b/src/templates/home/URLDeck/UpdateUTubDescriptionForm.html
@@ -1,9 +1,9 @@
 
 <!-- Shown when updating UTub title and UTub has no description -->
-<p id="URLDeckSubheaderCreateDescription" style="display: none;">Add a description?</p>
+<p id="URLDeckSubheaderCreateDescription" class="hidden">Add a description?</p>
 
 <!-- Form to update UTub Description -->
-<div class="createDiv flex-row full-width" id="UTubDescriptionUpdateWrap" style="display: none;">
+<div class="createDiv flex-row full-width hidden" id="UTubDescriptionUpdateWrap">
 	<div class="text-input-container sixtyfive-width">
 		<div class="text-input-inner-container">
 			<input class="text-input" type="text" id="utubDescriptionUpdate" name="utubDescription" maxlength={{CONSTANTS.UTUBS.MAX_DESCRIPTION_LENGTH}} required>
