--- a/src/templates/home/URLDeck/UpdateUTubNameForm.html
+++ b/src/templates/home/URLDeck/UpdateUTubNameForm.html
@@ -1,4 +1,4 @@
-<div class="createDiv flex-row full-width pad-top-5p" style="display: none;">
+<div class="createDiv flex-row full-width pad-top-5p hidden">
 	<div class="text-input-container full-width">
 		<div class="text-input-inner-container">
 			<input class="text-input" type="text" id="utubNameUpdate" name="utubName" minlength={{CONSTANTS.UTUBS.MIN_NAME_LENGTH}} maxlength={{CONSTANTS.UTUBS.MAX_NAME_LENGTH}} required>
