--- a/src/templates/password_reset/forgot_password.html
+++ b/src/templates/password_reset/forgot_password.html
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<script nonce="{{ nonce }}" type="text/javascript">
     if (document.querySelector('head').childElementCount === 1) {
         window.location.href = '/';
     };
@@ -35,8 +35,8 @@
         {{ forgot_password_form.submit(class="btn btn-success login-register-form-group login-register-buttons
         center-block col-7 mr-4")}}
         <a id="ToLoginFromForgotPassword" class="btn btn-secondary col-4 login-register-form-group center-block"
-            href="javascript:;">Back to Login</a>
+            href="#">Back to Login</a>
     </div>
 </form>
 
-<script src="{{ url_for('static', filename='scripts/splash/forgotPassword.js') }}?v={{ ASSET_VERSION }}"></script>
+<script nonce="{{ nonce }}" src="{{ url_for('static', filename='scripts/splash/forgotPassword.js') }}?v={{ ASSET_VERSION }}"></script>
