--- a/src/templates/password_reset/reset_password.html
+++ b/src/templates/password_reset/reset_password.html
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<script nonce="{{ nonce }}" type="text/javascript">
     if (document.querySelector('head').childElementCount === 1) {
         window.location.href = '/';
     };
@@ -52,4 +52,4 @@
     </div>
 </form>
 
-<script src="{{ url_for('static', filename='scripts/splash/resetPassword.js') }}?v={{ ASSET_VERSION }}"></script>
+<script nonce="{{ nonce }}" src="{{ url_for('static', filename='scripts/splash/resetPassword.js') }}?v={{ ASSET_VERSION }}"></script>
