--- a/src/templates/email_validation/email_needs_validation_modal.html
+++ b/src/templates/email_validation/email_needs_validation_modal.html
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<script nonce="{{ nonce }}" type="text/javascript">
     if (document.querySelector('head').childElementCount === 1) {
         window.location.href = '/';
     };
@@ -30,4 +30,4 @@
     </div>
 </form>
 
-<script src="{{ url_for('static', filename='scripts/splash/emailValidation.js') }}?v={{ ASSET_VERSION }}"></script>
+<script nonce="{{ nonce }}" src="{{ url_for('static', filename='scripts/splash/emailValidation.js') }}?v={{ ASSET_VERSION }}"></script>
