--- a/src/templates/home/UTubDeck/UTubDeckHeaders.html
+++ b/src/templates/home/UTubDeck/UTubDeckHeaders.html
@@ -5,7 +5,7 @@
         <div id="UTubSelectDualLoadingRing"></div>
     </div>
     <!-- Icons -->
-    <div class="flex-row button-container flex-center" style="gap:2px">
+    <div class="flex-row button-container flex-center gap-2p">
         <i id="UTubSearchFilterIcon">
             <svg xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-plus-square-fill"
                 height="26" width="26"
@@ -36,7 +36,7 @@
 
 
         <!-- Delete UTub button -->
-        <i id="utubBtnDelete" class="ms-1" style="display:none" tabindex="0">
+        <i id="utubBtnDelete" class="ms-1 hidden" tabindex="0">
             <svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30" fill="black"
                 class="bi trash-fill text-danger">
                 <path
@@ -55,10 +55,10 @@
         <h5 id="UTubDeckSubheader">{{ utubs_for_this_user|length }} UTubs</h5>
         {% endif %}
         <div id="SearchUTubWrap" class="input-text-holder flex-column createDiv hidden">
-            <div class="text-input-container" style>
+            <div class="text-input-container">
                 <div class="text-input-inner-container">
                     <input placeholder="Search UTubs" class="text-input focus search-input" type="text" id="UTubNameSearch" name="utubName" minlength="{{CONSTANTS.UTUBS.MIN_NAME_LENGTH}}" maxlength="{{CONSTANTS.UTUBS.MAX_NAME_LENGTH}}" required="" tabindex="0">
-                    <label class="text-input-label search-input-label" for="utubNameSearch" style="top: 50%; left: 10px; font-size: 16px;">Search UTubs</label>
+                    <label class="text-input-label search-input-label top-50perc left-10p font-size-16p" for="utubNameSearch">Search UTubs</label>
                 </div>
             </div>
         </div>
