--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<script nonce="{{ nonce }}" type="text/javascript">
     if (document.querySelector('head').childElementCount === 1) {
         window.location.href = '/';
     };
@@ -8,6 +8,7 @@
 <form id="ModalForm" method="POST" class="login-register-form" action="/login" novalidate>
     <div class="modal-header">
         <h4 class="modal-title">Login!</h4>
+        <p>DEBUG: {{ nonce }}</p>
         <button type="button" class="btn-close close-register-login-modal" data-bs-dismiss="modal" aria-label="close">
         </button>
     </div>
@@ -46,7 +47,7 @@
             </div>
             <div class="form-group" id="ForgotPasswordLink">
                 <small class="text-muted">
-                    <a class="splash-page-links to-forgot-password" href="javascript:;">Forgot your password?</a>
+                    <a class="splash-page-links to-forgot-password" href="#">Forgot your password?</a>
                 </small>
             </div>
         </fieldset>
@@ -55,8 +56,8 @@
         {{ login_form.submit(class="btn btn-success login-register-form-group login-register-buttons center-block col-4
         mr-4")}}
         <a id="ToRegisterFromLogin" class="btn btn-secondary col-7 login-register-form-group center-block"
-            href="javascript:;">Register</a>
+            href="#">Register</a>
     </div>
 </form>
 
-<script src="{{ url_for('static', filename='scripts/splash/login.js') }}?v={{ ASSET_VERSION }}"></script>
+<script nonce="{{ nonce }}" src="{{ url_for('static', filename='scripts/splash/login.js') }}?v={{ ASSET_VERSION }}"></script>
