--- a/src/templates/modals/homeModalBase.html
+++ b/src/templates/modals/homeModalBase.html
@@ -2,7 +2,7 @@
     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <script type="text/javascript">
+            <script type="text/javascript" nonce="{{ nonce }}">
                 if (document.querySelector('head').childElementCount === 1) {
                     window.location.href = '/home';
                 };
