--- a/src/templates/password_reset/reset_password_modal.html
+++ b/src/templates/password_reset/reset_password_modal.html
@@ -2,7 +2,7 @@
     aria-modal="true" role="dialog">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            <script type="text/javascript">
+            <script nonce="{{ nonce }}" type="text/javascript">
                 if (document.querySelector('head').childElementCount === 1) {
                     window.location.href = '/';
                 };
@@ -62,12 +62,12 @@
                 </div>
             </form>
 
-            <script
+            <script nonce="{{ nonce }}"
                 src="{{ url_for('static', filename='scripts/splash/resetPassword.js') }}?v={{ ASSET_VERSION }}"></script>
         </div>
     </div>
 </div>
 
-<script type="text/javascript">
+<script nonce="{{ nonce }}" type="text/javascript">
     bootstrap.Modal.getOrCreateInstance('#SplashModal').show();
 </script>
