Refactor strings into constants for easier testing

--- a/src/templates/_strings.html
+++ b/src/templates/_strings.html
@@ -4,6 +4,18 @@ class Strings {
 
 			// Query Param Strings
 			this.UTUB_QUERY_PARAM = "{{CONSTANTS.STRINGS.UTUB_QUERY_PARAM}}";
+			this.VALIDATE_MY_EMAIL = "{{CONSTANTS.STRINGS.VALIDATE_MY_EMAIL}}";
+			this.VALIDATE_YOUR_EMAIL = "{{CONSTANTS.STRINGS.VALIDATE_YOUR_EMAIL}}";
+			this.UTUB_CREATE_SAME_NAME = "{{CONSTANTS.STRINGS.UTUB_CREATE_SAME_NAME}}"
+			this.UTUB_UPDATE_SAME_NAME = "{{CONSTANTS.STRINGS.UTUB_UPDATE_SAME_NAME}}"
+			this.UTUB_DELETE_WARNING = "{{CONSTANTS.STRINGS.UTUB_DELETE_WARNING}}"
+			this.UTUB_CREATE_MSG = "{{CONSTANTS.STRINGS.UTUB_CREATE_MSG}}"
+			this.MEMBER_DELETE_WARNING = "{{CONSTANTS.STRINGS.MEMBER_DELETE_WARNING}}"
+			this.MEMBER_LEAVE_WARNING = "${{CONSTANTS.STRINGS.MEMBER_LEAVE_WARNING}}"
+			this.DELETE_URL_WARNING = "${{CONSTANTS.STRINGS.DELETE_URL_WARNING}}"
+			this.UTUB_SELECT = "${{CONSTANTS.STRINGS.UTUB_SELECT}}"
+			this.FORGOT_YOUR_PASSWORD = "${{CONSTANTS.STRINGS.FORGOT_YOUR_PASSWORD}}"
+			this.LOGIN_TITLE = "${{CONSTANTS.STRINGS.LOGIN_TITLE}}"
 			Strings.instance = this;
 		}
 
