--- a/src/templates/home/URLDeck/URLDeckSubheader.html
+++ b/src/templates/home/URLDeck/URLDeckSubheader.html
@@ -1,6 +1,6 @@
 <div class="titleElement pad-in-15p dynamic-subheader height-2p5rem">
 	<div class="flex-row align-center" id="UTubDescriptionSubheaderWrap">
-		<h5 id="URLDeckSubheader">Select a UTub</h5>
+		<h5 id="URLDeckSubheader">{{CONSTANTS.STRINGS.UTUB_SELECT}}</h5>
 		<!-- Update UTub description button -->
 		<i id="updateUTubDescriptionBtn" class="mx-1 hiddenBtn">
 			<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
