--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -7,7 +7,7 @@
 
 <form id="ModalForm" method="POST" class="login-register-form" action="/login" novalidate>
     <div class="modal-header">
-        <h4 class="modal-title">Login!</h4>
+        <h4 class="modal-title">{{CONSTANTS.STRINGS.LOGIN_TITLE}}</h4>
         <button type="button" class="btn-close close-register-login-modal" data-bs-dismiss="modal" aria-label="close">
         </button>
     </div>
@@ -46,7 +46,7 @@
             </div>
             <div class="form-group" id="ForgotPasswordLink">
                 <small class="text-muted">
-                    <a class="splash-page-links to-forgot-password" href="#">Forgot your password?</a>
+                    <a class="splash-page-links to-forgot-password" href="#">{{CONSTANTS.STRINGS.FORGOT_YOUR_PASSWORD}}</a>
                 </small>
             </div>
         </fieldset>
