--- a/src/templates/password_reset/forgot_password.html
+++ b/src/templates/password_reset/forgot_password.html
@@ -5,7 +5,7 @@
 </script>
 <form id="ModalForm" method="POST" class="login-register-form" action="" novalidate>
     <div class="modal-header">
-        <h4 class="modal-title">Forgot your password?</h4>
+        <h4 class="modal-title">{{ CONSTANTS.STRINGS.FORGOT_YOUR_PASSWORD }}</h4>
         <button type="button" class="btn-close close-modal" data-bs-dismiss="modal" aria-label="close">
         </button>
     </div>
