--- a/src/templates/email_validation/email_needs_validation_modal_expired.html
+++ b/src/templates/email_validation/email_needs_validation_modal_expired.html
@@ -11,7 +11,7 @@
                 <div class="modal-header">
                     <div class="email-container">
                         <div id="ValidateEmailIcon">✉️</div>
-                        <h1 class="modal-title validate-email-text validate-email-title">Validate Your Email!</h1>
+                        <h1 class="modal-title validate-email-text validate-email-title">{{CONSTANTS.STRINGS.VALIDATE_YOUR_EMAIL}}</h1>
                         <button type="button" class="btn-close close-modal" data-bs-dismiss="modal" aria-label="close">
                         </button>
                     </div>
