--- a/src/templates/_strings.html
+++ b/src/templates/_strings.html
@@ -11,11 +11,11 @@ class Strings {
 			this.UTUB_DELETE_WARNING = "{{CONSTANTS.STRINGS.UTUB_DELETE_WARNING}}"
 			this.UTUB_CREATE_MSG = "{{CONSTANTS.STRINGS.UTUB_CREATE_MSG}}"
 			this.MEMBER_DELETE_WARNING = "{{CONSTANTS.STRINGS.MEMBER_DELETE_WARNING}}"
-			this.MEMBER_LEAVE_WARNING = "${{CONSTANTS.STRINGS.MEMBER_LEAVE_WARNING}}"
-			this.DELETE_URL_WARNING = "${{CONSTANTS.STRINGS.DELETE_URL_WARNING}}"
-			this.UTUB_SELECT = "${{CONSTANTS.STRINGS.UTUB_SELECT}}"
-			this.FORGOT_YOUR_PASSWORD = "${{CONSTANTS.STRINGS.FORGOT_YOUR_PASSWORD}}"
-			this.LOGIN_TITLE = "${{CONSTANTS.STRINGS.LOGIN_TITLE}}"
+			this.MEMBER_LEAVE_WARNING = "{{CONSTANTS.STRINGS.MEMBER_LEAVE_WARNING}}"
+			this.DELETE_URL_WARNING = "{{CONSTANTS.STRINGS.DELETE_URL_WARNING}}"
+			this.UTUB_SELECT = "{{CONSTANTS.STRINGS.UTUB_SELECT}}"
+			this.FORGOT_YOUR_PASSWORD = "{{CONSTANTS.STRINGS.FORGOT_YOUR_PASSWORD}}"
+			this.LOGIN_TITLE = "{{CONSTANTS.STRINGS.LOGIN_TITLE}}"
 			Strings.instance = this;
 		}
 
